<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/wormholelogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/edtext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/edtext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sigIn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_btn"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/sign_in"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/im_new"
            android:fontFamily="@font/spartan_regular"
            android:textSize="@dimen/_16sdp"
            />
        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pr_purple"
            android:fontFamily="@font/spartan_bold"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:text="@string/register"/>
    </LinearLayout>

</RelativeLayout>